--- a/simple-rsvp/index.html
+++ b/simple-rsvp/index.html
@@ -8,6 +8,10 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Poppins:400,700"
         />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:400,700"
+        />
         <title>SimpleRSVP</title>
     </head>
     <body>
