--- a/simple-rsvp/index.html
+++ b/simple-rsvp/index.html
@@ -12,6 +12,12 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto:400,700"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+            integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+            crossorigin="anonymous"
+        />
         <title>SimpleRSVP</title>
     </head>
     <body>
